Closed Bug 1257314 Opened 8 years ago Closed 8 years ago

topcrash in mozilla::ipc::MessageChannel::PeekMessages, new in 2016-03-16 nightly

Categories

(Core :: Panning and Zooming, defect)

Unspecified
Windows NT
defect
Not set
critical

Tracking

()

RESOLVED FIXED
Tracking Status
firefox47 --- unaffected
firefox48 - fixed

People

(Reporter: dbaron, Assigned: BenWa)

References

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

[Tracking Requested - why for this release]:

This bug was filed from the Socorro interface and is 
report bp-a4117e61-2d14-440f-80fb-d82502160316.
=============================================================

There's a major new topcrash (#1, by a lot) in today's nightly.  It's presumably a regression from https://hg.mozilla.org/mozilla-central/rev/5863b88e10cc / bug 1242609.

Query of all such crashes on nightly:
https://crash-stats.mozilla.com/signature/?product=Firefox&release_channel=nightly&date=%3E%3D2016-03-14&signature=mozilla%3A%3Aipc%3A%3AMessageChannel%3A%3APeekMessages
Flags: needinfo?(bgirard)
Assignee: nobody → bgirard
Comment on attachment 8731432 [details]
MozReview Request: Bug 1257314 - Properly lock in IPC PeekMessages. r=billm

https://reviewboard.mozilla.org/r/40593/#review37111
Attachment #8731432 - Flags: review?(dvander) → review+
Given the nature of the problem I opted to fix it rather than issue a backout even if it's a topcrasher. If the problem persist tomorrow somehow then we should issue a backout for the next Nightly.
Flags: needinfo?(bgirard)
Last crashing buildid is '2016-03-16-030233'.
You need to log in before you can comment on or make changes to this bug.