Bug 1257314 - Properly lock in IPC PeekMessages. r=dvander a=topcrash

MozReview-Commit-ID: 8iUVhiN9Ksk

--HG--
extra : source : 186064e556caa51a3cb804e43ff7356b36e3e2f2